--- a/styles/common.scss
+++ b/styles/common.scss
@@ -1,1 +1,16 @@
 $mainColor: #fd393b;
+
+@mixin x-gutter {
+  padding: 0% 10%;
+}
+
+@mixin buttonStyle($pY, $pX, $radius) {
+  padding: $pY $pX;
+  border: none;
+  outline: none;
+  background-color: $mainColor;
+  color: white;
+  font-weight: 500;
+  border-radius: $radius;
+  cursor: pointer;
+}
