--- a/app/globals.css
+++ b/app/globals.css
@@ -56,4 +56,40 @@ html {
     hsl(0deg 100% 100%) 23%,
     hsl(0deg 0% 100%) 86%
   );
+  background-image: -moz-linear-gradient(
+    180deg,
+    hsl(354deg 100% 98%) 0%,
+    hsl(353deg 100% 98%) 0%,
+    hsl(350deg 100% 99%) 2%,
+    hsl(0deg 100% 99%) 9%,
+    hsl(0deg 100% 100%) 23%,
+    hsl(0deg 0% 100%) 86%
+  );
+  background-image: -webkit-linear-gradient(
+    180deg,
+    hsl(354deg 100% 98%) 0%,
+    hsl(353deg 100% 98%) 0%,
+    hsl(350deg 100% 99%) 2%,
+    hsl(0deg 100% 99%) 9%,
+    hsl(0deg 100% 100%) 23%,
+    hsl(0deg 0% 100%) 86%
+  );
+  background-image: -o-linear-gradient(
+    180deg,
+    hsl(354deg 100% 98%) 0%,
+    hsl(353deg 100% 98%) 0%,
+    hsl(350deg 100% 99%) 2%,
+    hsl(0deg 100% 99%) 9%,
+    hsl(0deg 100% 100%) 23%,
+    hsl(0deg 0% 100%) 86%
+  );
+  background-image: -ms-linear-gradient(
+    180deg,
+    hsl(354deg 100% 98%) 0%,
+    hsl(353deg 100% 98%) 0%,
+    hsl(350deg 100% 99%) 2%,
+    hsl(0deg 100% 99%) 9%,
+    hsl(0deg 100% 100%) 23%,
+    hsl(0deg 0% 100%) 86%
+  );
 }
