--- a/components/Testimonies/index.scss
+++ b/components/Testimonies/index.scss
@@ -7,6 +7,8 @@
   justify-content: space-around;
 
   .testimonies-box {
+    padding-top: 2.5rem;
+
     h1 {
       padding: 2rem;
       text-align: center;
@@ -36,6 +38,9 @@
 
           img {
             border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            object-fit: cover;
           }
 
           .name-and-title {
