--- a/components/TopFoods/index.scss
+++ b/components/TopFoods/index.scss
@@ -76,6 +76,7 @@
         width: 100%;
         font-size: 0.75rem;
         font-weight: 700;
+        background-color: $blueNight;
       }
     }
   }
