--- a/components/Footer/index.scss
+++ b/components/Footer/index.scss
@@ -4,6 +4,7 @@ footer {
   width: 100%;
   display: flex;
   padding: 2rem;
+  padding-bottom: 3rem;
   font-size: 0.8rem;
   color: #413f41;
   justify-content: space-evenly;
