--- a/components/Testimonies/index.scss
+++ b/components/Testimonies/index.scss
@@ -1,13 +1,14 @@
 @import "../../styles/common.scss";
 
 .testimonies {
-  padding: 3rem;
+  padding: 3rem 4rem;
   width: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+  gap: 75px;
 
   .testimonies-box {
-    padding-top: 2.5rem;
+    padding-top: 3.2rem;
 
     h1 {
       padding: 2rem;
@@ -57,6 +58,19 @@
           display: flex;
           gap: 5px;
         }
+      }
+    }
+
+    .nav-arrows {
+      padding-left: 1.2rem;
+      display: flex;
+      gap: 20px;
+
+      button {
+        position: relative;
+        padding: 10px;
+        border-radius: 50%;
+        box-shadow: 2px 2px 5px rgb(223, 222, 222);
       }
     }
   }
