--- a/components/FoodMenu/index.scss
+++ b/components/FoodMenu/index.scss
@@ -1,19 +1,69 @@
 @import "../../styles/common.scss";
 
 .food-menu {
-  padding: 3rem;
-  display: flex;
-  justify-content: space-around;
-  border-radius: 25px;
-  width: 100%;
-  height: 400px;
-  border: 1px solid rgb(241, 203, 203);
+  h1 {
+    padding: 2rem;
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: 700;
+  }
+  .menu-box {
+    padding: 1rem;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    flex-wrap: wrap;
+    border-radius: 25px;
+    width: 100%;
+    height: 500px;
+    overflow-y: scroll;
+    background-color: rgba($color: $mainColor, $alpha: 0.5);
 
-  .food-card {
-    background-color: white;
-    border-radius: 7px;
+    .food-card {
+      cursor: pointer;
+      background-color: white;
+      border-radius: 15px;
+      width: 200px;
+      height: 215px;
+      padding: 10px;
 
-    img {
+      .dish-image {
+        position: relative;
+        width: 100%;
+        height: 65%;
+
+        img {
+          border-radius: 15px;
+          object-fit: cover;
+        }
+      }
+
+      .dish-infos {
+        padding-top: 10px;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+
+        .name-and-price {
+          color: rgba($color: $blueNight, $alpha: 0.8);
+          font-weight: bold;
+          display: flex;
+          justify-content: space-between;
+        }
+
+        button {
+          @include buttonStyle(5px, 5px, 50px);
+          width: 100%;
+          font-size: 0.7rem;
+          font-weight: 700;
+          background-color: $blueNight;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          gap: 10px;
+          padding-bottom: 5px;
+        }
+      }
     }
   }
 }
