--- a/components/Navbar/index.scss
+++ b/components/Navbar/index.scss
@@ -1,49 +1,117 @@
 @import "../../styles/common.scss";
 
 nav {
-  @include x-gutter;
-  padding-top: 2%;
-  padding-bottom: 2%;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
+  justify-content: center;
 
-  ul {
-    list-style-type: none;
+  .navbar-items {
+    @include x-gutter;
+    padding-top: 2%;
+    padding-bottom: 2%;
     display: flex;
-    justify-content: center;
-    gap: 25px;
-    width: auto;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
 
-    li {
+    &.fix {
+      position: fixed;
+      top: 5px;
+      border-radius: 50px;
+      box-shadow: 5px 5px 10px rgb(245, 219, 219);
+      z-index: 10;
+      width: 80%;
+      justify-self: center;
+      transition: top 1s ease-in;
+      background-image: linear-gradient(
+        115deg,
+        hsl(351deg 100% 97%) 0%,
+        hsl(351deg 100% 98%) 0%,
+        hsl(351deg 100% 98%) 1%,
+        hsl(352deg 100% 98%) 3%,
+        hsl(352deg 100% 98%) 6%,
+        hsl(352deg 100% 99%) 11%,
+        hsl(352deg 100% 99%) 19%,
+        hsl(352deg 100% 99%) 30%,
+        hsl(352deg 100% 100%) 47%,
+        hsl(0deg 0% 100%) 88%
+      );
+      background-image: -moz-linear-gradient(
+        115deg,
+        hsl(351deg 100% 97%) 0%,
+        hsl(351deg 100% 98%) 0%,
+        hsl(351deg 100% 98%) 1%,
+        hsl(352deg 100% 98%) 3%,
+        hsl(352deg 100% 98%) 6%,
+        hsl(352deg 100% 99%) 11%,
+        hsl(352deg 100% 99%) 19%,
+        hsl(352deg 100% 99%) 30%,
+        hsl(352deg 100% 100%) 47%,
+        hsl(0deg 0% 100%) 88%
+      );
+      background-image: -webkit-linear-gradient(
+        115deg,
+        hsl(351deg 100% 97%) 0%,
+        hsl(351deg 100% 98%) 0%,
+        hsl(351deg 100% 98%) 1%,
+        hsl(352deg 100% 98%) 3%,
+        hsl(352deg 100% 98%) 6%,
+        hsl(352deg 100% 99%) 11%,
+        hsl(352deg 100% 99%) 19%,
+        hsl(352deg 100% 99%) 30%,
+        hsl(352deg 100% 100%) 47%,
+        hsl(0deg 0% 100%) 88%
+      );
+      background-image: -o-linear-gradient(
+        115deg,
+        hsl(351deg 100% 97%) 0%,
+        hsl(351deg 100% 98%) 0%,
+        hsl(351deg 100% 98%) 1%,
+        hsl(352deg 100% 98%) 3%,
+        hsl(352deg 100% 98%) 6%,
+        hsl(352deg 100% 99%) 11%,
+        hsl(352deg 100% 99%) 19%,
+        hsl(352deg 100% 99%) 30%,
+        hsl(352deg 100% 100%) 47%,
+        hsl(0deg 0% 100%) 88%
+      );
+    }
+
+    ul {
+      list-style-type: none;
+      display: flex;
+      justify-content: center;
+      gap: 25px;
       width: auto;
 
-      a {
-        width: 100%;
-        font-weight: 500;
+      li {
+        width: auto;
 
-        &.active {
-          position: relative;
-          display: flex;
-          justify-content: center;
+        a {
+          width: 100%;
+          font-weight: 500;
 
-          &::after {
-            content: "";
-            position: absolute;
-            bottom: -10px;
-            width: 7px;
-            height: 7px;
-            border-radius: 50%;
-            background-color: $mainColor;
+          &.active {
+            position: relative;
+            display: flex;
+            justify-content: center;
+
+            &::after {
+              content: "";
+              position: absolute;
+              bottom: -10px;
+              width: 7px;
+              height: 7px;
+              border-radius: 50%;
+              background-color: $mainColor;
+            }
           }
         }
       }
     }
-  }
 
-  .user-stuff {
-    display: flex;
-    gap: 20px;
+    .user-stuff {
+      display: flex;
+      gap: 20px;
+    }
   }
 }
