--- a/components/Navbar/index.scss
+++ b/components/Navbar/index.scss
@@ -16,64 +16,15 @@ nav {
     &.fix {
       position: fixed;
       top: 5px;
-      border-radius: 50px;
-      box-shadow: 5px 5px 10px rgb(245, 219, 219);
-      z-index: 10;
+      border-radius: 15px;
+      border: 1px solid rgba(255, 255, 255, 0.3);
+      box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.1);
+      z-index: 3;
       width: 80%;
       justify-self: center;
       transition: top 1s ease-in;
-      background-image: linear-gradient(
-        115deg,
-        hsl(351deg 100% 97%) 0%,
-        hsl(351deg 100% 98%) 0%,
-        hsl(351deg 100% 98%) 1%,
-        hsl(352deg 100% 98%) 3%,
-        hsl(352deg 100% 98%) 6%,
-        hsl(352deg 100% 99%) 11%,
-        hsl(352deg 100% 99%) 19%,
-        hsl(352deg 100% 99%) 30%,
-        hsl(352deg 100% 100%) 47%,
-        hsl(0deg 0% 100%) 88%
-      );
-      background-image: -moz-linear-gradient(
-        115deg,
-        hsl(351deg 100% 97%) 0%,
-        hsl(351deg 100% 98%) 0%,
-        hsl(351deg 100% 98%) 1%,
-        hsl(352deg 100% 98%) 3%,
-        hsl(352deg 100% 98%) 6%,
-        hsl(352deg 100% 99%) 11%,
-        hsl(352deg 100% 99%) 19%,
-        hsl(352deg 100% 99%) 30%,
-        hsl(352deg 100% 100%) 47%,
-        hsl(0deg 0% 100%) 88%
-      );
-      background-image: -webkit-linear-gradient(
-        115deg,
-        hsl(351deg 100% 97%) 0%,
-        hsl(351deg 100% 98%) 0%,
-        hsl(351deg 100% 98%) 1%,
-        hsl(352deg 100% 98%) 3%,
-        hsl(352deg 100% 98%) 6%,
-        hsl(352deg 100% 99%) 11%,
-        hsl(352deg 100% 99%) 19%,
-        hsl(352deg 100% 99%) 30%,
-        hsl(352deg 100% 100%) 47%,
-        hsl(0deg 0% 100%) 88%
-      );
-      background-image: -o-linear-gradient(
-        115deg,
-        hsl(351deg 100% 97%) 0%,
-        hsl(351deg 100% 98%) 0%,
-        hsl(351deg 100% 98%) 1%,
-        hsl(352deg 100% 98%) 3%,
-        hsl(352deg 100% 98%) 6%,
-        hsl(352deg 100% 99%) 11%,
-        hsl(352deg 100% 99%) 19%,
-        hsl(352deg 100% 99%) 30%,
-        hsl(352deg 100% 100%) 47%,
-        hsl(0deg 0% 100%) 88%
-      );
+      backdrop-filter: blur(15px);
+      -webkit-backdrop-filter: blur(15px);
     }
 
     ul {
@@ -112,6 +63,27 @@ nav {
     .user-stuff {
       display: flex;
       gap: 20px;
+
+      #cart {
+        position: relative;
+
+        &::before {
+          content: attr(data-count);
+          position: absolute;
+          top: -10px;
+          right: -10px;
+          width: 20px;
+          height: 20px;
+          border-radius: 50%;
+          background-color: $mainColor;
+          color: white;
+          font-size: 10px;
+          font-weight: bold;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        }
+      }
     }
   }
 }
