--- a/components/FoodMenu/index.scss
+++ b/components/FoodMenu/index.scss
@@ -1,12 +1,52 @@
 @import "../../styles/common.scss";
 
 .food-menu {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+
   h1 {
     padding: 2rem;
     text-align: center;
     font-size: 1.5rem;
     font-weight: 700;
   }
+
+  ul {
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-end;
+    margin-bottom: 50px;
+
+    li {
+      width: 100%;
+      font-weight: 500;
+      padding: 10px;
+      cursor: pointer;
+      border-radius: 10px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 15px;
+
+      span {
+        width: 50px;
+        height: 50px;
+        position: relative;
+
+        img {
+          object-fit: contain;
+        }
+      }
+
+      &.active {
+        background-color: $mainColor;
+        color: white;
+      }
+    }
+  }
+
   .menu-box {
     padding: 1rem;
     display: flex;
@@ -15,64 +55,15 @@
     flex-wrap: wrap;
     border-radius: 25px;
     width: 100%;
-    height: 500px;
+    height: 550px;
+    overflow: hidden;
     overflow-y: scroll;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
     background-color: rgba($color: $mainColor, $alpha: 0.6);
-    position: relative;
 
-    .food-card {
-      cursor: pointer;
-      background-color: white;
-      border-radius: 15px;
-      width: 200px;
-      height: 215px;
-      padding: 10px;
-      position: relative;
-
-      .dish-image {
-        position: relative;
-        width: 100%;
-        height: 65%;
-
-        img {
-          border-radius: 15px;
-          object-fit: cover;
-        }
-      }
-
-      .dish-infos {
-        padding-top: 10px;
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-
-        .name-and-price {
-          color: rgba($color: $blueNight, $alpha: 0.8);
-          font-weight: bold;
-          display: flex;
-          justify-content: space-between;
-        }
-
-        button {
-          @include buttonStyle(5px, 5px, 50px);
-          width: 100%;
-          font-size: 0.7rem;
-          font-weight: 700;
-          background-color: $blueNight;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          gap: 10px;
-          padding-bottom: 5px;
-        }
-      }
-
-      .flyable {
-        z-index: 3;
-        position: absolute;
-        transform-origin: top right;
-        transition: transform 1s ease;
-      }
+    &::-webkit-scrollbar {
+      display: none;
     }
   }
 }
