Add user cart as side panel

--- a/components/Navbar/index.scss
+++ b/components/Navbar/index.scss
@@ -66,6 +66,7 @@ nav {
 
       #cart {
         position: relative;
+        cursor: pointer;
 
         &::before {
           content: attr(data-count);
