--- a/components/Cart/index.scss
+++ b/components/Cart/index.scss
@@ -16,10 +16,6 @@ $cartMainColor: #b5b5bd;
   display: flex;
   flex-direction: column;
   gap: 10px;
-  overflow: hidden;
-  overflow-y: scroll;
-  scrollbar-width: none;
-  -ms-overflow-style: none;
 
   &::-webkit-scrollbar {
     display: none;
@@ -35,27 +31,31 @@ $cartMainColor: #b5b5bd;
     span {
       font-size: 1.5rem;
       cursor: pointer;
+      color: $mainColor;
     }
+  }
+
+  .no-order {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    font-weight: 500;
+    color: $blueNight;
   }
 
   .orders {
     display: flex;
     flex-direction: column;
-    height: 100%;
-
-    .no-order {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100%;
-      font-weight: 500;
-      color: $blueNight;
-    }
+    height: auto;
+    overflow: hidden;
+    overflow-y: scroll;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
 
     .order {
       width: 100%;
       border-bottom: 2px solid rgba($color: $cartMainColor, $alpha: 0.3);
-      cursor: pointer;
       padding: 15px 5px;
       display: flex;
       gap: 10px;
@@ -89,46 +89,113 @@ $cartMainColor: #b5b5bd;
             color: $blueNight;
           }
         }
+      }
+    }
+  }
 
-        .counter-and-amount {
-          width: 100%;
+  .check-out {
+    justify-self: flex-end;
+    height: auto;
+
+    .about-delivery {
+      padding: 15px 5px;
+      display: flex;
+      gap: 10px;
+      color: $blueNight;
+      font-size: 12px;
+      font-weight: 500;
+
+      .delivery-icon {
+        width: 125px;
+        height: 70px;
+        border-radius: 10px;
+        display: grid;
+        place-items: center;
+        color: $mainColor;
+        background-color: rgba($color: $mainColor, $alpha: 0.25);
+      }
+
+      .cost-duration {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+
+        .delivery-time {
+          color: $blueNight;
           display: flex;
-          justify-content: space-between;
-          align-items: center;
+          flex-direction: column;
+          justify-content: center;
+          gap: 5px;
 
-          .counter {
-            display: flex;
-            align-items: center;
-            gap: 5px;
-            font-size: 12px;
-
-            span {
-              border-radius: 3px;
-              font-size: 12px;
-              display: flex;
-              justify-content: center;
-              align-items: center;
-              padding: 2px 3px;
-
-              &:nth-child(1),
-              &:nth-child(3) {
-                background-color: rgba($color: $cartMainColor, $alpha: 0.1);
-                cursor: pointer;
-              }
-            }
-          }
-
-          .amount {
-            display: flex;
-            gap: 5px;
-            font-weight: 500;
-
-            span {
-              color: $blueNight;
-            }
+          p {
+            color: $mainColor;
           }
         }
+
+        .delivery-cost {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+        }
       }
+    }
+
+    .promo-code {
+      display: flex;
+      gap: 10px;
+
+      .input-group {
+        display: flex;
+        position: relative;
+
+        input {
+          width: 100%;
+          padding: 5px 20px;
+          padding-right: 40px;
+          outline: none;
+          border: 2px solid $cartMainColor;
+          border-radius: 10px;
+          color: $cartMainColor;
+          font-weight: bold;
+          font-size: 0.8rem;
+        }
+
+        .joke-emoji {
+          display: none;
+          position: absolute;
+          right: 10px;
+        }
+      }
+
+      button {
+        @include buttonStyle(5px, 10px, 10px);
+        font-size: 0.8rem;
+      }
+    }
+
+    .totals {
+      padding-top: 1rem;
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      margin-bottom: 1.2rem;
+      color: $cartMainColor;
+      font-weight: bold;
+      font-size: 0.8rem;
+
+      p {
+        display: flex;
+        justify-content: space-between;
+
+        .total-amount {
+          color: $blueNight;
+        }
+      }
+    }
+
+    .order-btn {
+      @include buttonStyle(10px, 30px, 25px);
+      width: 100%;
     }
   }
 }
